Fomatted code and removed non UTF-8 chars